feature (other): 模拟一边绘制一边计算的场景

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FastPath</string>
+    <string name="zip_result">原始点数量：%1$d，压缩后：%2$d\n</string>
 </resources>
